🌈 Change Styles: Update styles for carts, user, products, username management, and replace style.css with Tailwind CSS in Handlebars.

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,124 +1,213 @@
-<p>Rol: {{isAdminOrPremium}} </p>
-<p>Nombre: {{firstname}}</p>
-<p>Visit : {{visit}}</p>
-<div>
-  <h3>eliminando la Cuenta</h3>
-  <form action="/api/session/logout" method="get">
-    <button type="submit">clearSession</button>
-  </form>
-</div>
-<div>
-  <h3>Mockear Productos</h3>
-  <form action="/mockingproducts" method="get">
-    <button type="submit">Mockear Productos</button>
-  </form>
-</div>
-{{#if isAdminOrPremium}}
-<div class="container h-100">
-  <div class="row h-100">
-    <div class="col-md-4 my-auto">
-      <form class="card card-body rounded-0" id="noteForm" action="/api/products" method="POST"
-        enctype="multipart/form-data">
-        <h1 class="h3 mb-">Agrega un producto</h1>
-        <div class="form-group">
-          <label for="title">Titulo:</label>
-          <input type="text" id="title" name="title" placeholder="Escribe el titulo" class="form-control rounded-0 mb-1"
-            required>
-        </div>
-        <div class="form-group">
-          <label for="description">Descripción:</label>
-          <input type="text" id="description" name="description" placeholder="Escribe la descripción"
-            class="form-control rounded-0 mb-1" required>
-        </div>
-        <div class="form-group">
-          <label for="price">Precio:</label>
-          <input type="number" id="price" name="price" placeholder="Ingresa el precio"
-            class="form-control rounded-0 mb-1" required>
-        </div>
-        <div class="form-group">
-          <label for="stock">Stock:</label>
-          <input type="number" id="stock" name="stock" min="0" placeholder="Ingresa la cantidad de stock"
-            class="form-control rounded-0 mb-1" required>
-        </div>
-        <div class="form-group">
-          <label for="category">Categoría:</label>
-          <input type="text" id="category" name="category" placeholder="Ingresa la categoría"
-            class="form-control rounded-0 mb-1" required>
-        </div>
-        <div class="form-group">
-          <label for="image">Imagen:</label>
-          <input type="file" id="image" name="productImage" accept="image/*" class="form-control rounded-0 mb-1"
-            required>
+<header class='bg-black'>
+  <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
+</header>
+<main class='flex flex-col justify-center items-center py-12 lg:px-8'>
+  <h1 class='text-center text-underline'>Agregar un producto</h1>
+  <div class='flex flex-col items-center justify-between'>
+    <h2>PERFIL DEL USUARIO</h2>
+    <p>Rol: {{isAdminOrPremium}}</p>
+    <p>Nombre: {{firstname}}</p>
+    <form action='/api/session/logout' method='get'>
+      <button
+        type='submit'
+        class='border border-gray-200 bg-gray-200 text-gray-700 rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-gray-300 focus:outline-none focus:shadow-outline'
+      >
+        Cerrar session
+      </button>
+    </form>
+  </div>
+  <div>
+    <form action='/mockingproducts' method='get'>
+      <button
+        type='submit'
+        class='border border-gray-200 bg-black text-white rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-gray-800 focus:outline-none focus:shadow-outline'
+      >Mockear Productos</button>
+    </form>
+  </div>
 
-        </div>
-        <button class="btn btn-dark rounded-0">Enviar</button>
-      </form>
-    </div>
-
-    <div class="col-md-5 py-3 overflow-auto h-80">
-      <div class="d-flex justify-content-center">
-        {{#if hasPrevPage}}
-        <div class="pagination-container">
-          <p class="pagination-text">Página previa: {{prevPage}}</p>
-          <a href="/products?page={{prevPage}}"><button>Anterior</button></a>
-        </div>
-        {{/if}}
-        <div class="pagination-container">
-          <p class="pagination-text">Página actual: {{page}}</p>
-        </div>
-        {{#if hasNextPage}}
-        <div class="pagination-container">
-          <p class="pagination-text">Página siguiente: {{nextPage}}</p>
-          <a href="/products?page={{nextPage}}"><button>Siguiente</button></a>
-        </div>
-        {{/if}}
+  {{#if isAdminOrPremium}}
+    <div class='flex container max-w-6xl justify-between mx-auto'>
+      <div class='w-full md:w-1/2'>
+        <form
+          id='noteForm'
+          action='/api/products'
+          method='POST'
+          enctype='multipart/form-data'
+          class='max-w-md mx-auto p-8 bg-white rounded shadow-md'
+        >
+          <div class='mb-6'>
+            <label
+              for='title'
+              class='block text-gray-600 text-sm font-semibold mb-2'
+            >Titulo:</label>
+            <input
+              type='text'
+              id='title'
+              name='title'
+              placeholder='Escribe el titulo'
+              required
+              class='w-full p-2 border rounded'
+            />
+          </div>
+          <div class='mb-6'>
+            <label
+              for='description'
+              class='block text-gray-600 text-sm font-semibold mb-2'
+            >Descripción:</label>
+            <input
+              type='text'
+              id='description'
+              name='description'
+              placeholder='Escribe la descripción'
+              required
+              class='w-full p-2 border rounded'
+            />
+          </div>
+          <div class='mb-6'>
+            <label
+              for='price'
+              class='block text-gray-600 text-sm font-semibold mb-2'
+            >Precio:</label>
+            <input
+              type='number'
+              id='price'
+              name='price'
+              placeholder='Ingresa el precio'
+              required
+              class='w-full p-2 border rounded'
+            />
+          </div>
+          <div class='mb-6'>
+            <label
+              for='stock'
+              class='block text-gray-600 text-sm font-semibold mb-2'
+            >Stock:</label>
+            <input
+              type='number'
+              id='stock'
+              name='stock'
+              min='0'
+              placeholder='Ingresa la cantidad de stock'
+              required
+              class='w-full p-2 border rounded'
+            />
+          </div>
+          <div class='mb-6'>
+            <label
+              for='category'
+              class='block text-gray-600 text-sm font-semibold mb-2'
+            >Categoría:</label>
+            <input
+              type='text'
+              id='category'
+              name='category'
+              placeholder='Ingresa la categoría'
+              required
+              class='w-full p-2 border rounded'
+            />
+          </div>
+          <div class='mb-6'>
+            <label
+              for='image'
+              class='block text-gray-600 text-sm font-semibold mb-2'
+            >Imagen:</label>
+            <input
+              type='file'
+              id='image'
+              name='productImage'
+              accept='image/*'
+              required
+              class='w-full p-2 border rounded'
+            />
+          </div>
+          <button
+            class='w-full bg-blue-500 text-white p-3 rounded hover:bg-blue-600'
+          >Enviar</button>
+        </form>
       </div>
-      <div>
-        <div id="notes">
-          <div>
-            {{#each products}}
-            <div>
-              <div class="card card-body rounded-2 mb-2 animate__animated animate__fadeInUp background">
-                <button class="btn btn-danger btn-delete-product" data-product-id="{{id}}"
-                  style="border: 1px solid black; font-size: 12px;">Eliminar Producto</button>
-                <div class="d-flex justify-content-between">
-                  <h1 class="h3 card-title">{{title}}</h1>
-                  <p class="h5">${{price}}</p>
-                </div>
-                <p class="h5">STOCK {{stock}}</p>
-                <p>{{description}}</p>
-                <img src="{{thumbnails}}" alt="Product Image" class="image">
-                <p>Creador: {{email}}</p>
-                <p>role: {{owner}}</p>
 
-                
+      <div class='w-full md:w-1/2 ml-4'>
+        <div>
+          <p class='text-lg font-semibold'>Página actual: {{page}}</p>
+        </div>
+
+        <div class='flex justify-between items-center mt-8'>
+          {{#if hasPrevPage}}
+            <div class='flex items-center'>
+              <p class='mr-2'>Página previa: {{prevPage}}</p>
+              <a
+                href='/products?page={{prevPage}}'
+                class='bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'
+              >Anterior</a>
+            </div>
+          {{/if}}
+
+          {{#if hasNextPage}}
+            <div class='flex items-center'>
+              <p class='mr-2'>Página siguiente: {{nextPage}}</p>
+              <a
+                href='/products?page={{nextPage}}'
+                class='bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'
+              >Siguiente</a>
+            </div>
+          {{/if}}
+        </div>
+
+        <div class='grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6'>
+          {{#each products}}
+            <div class='bg-white rounded-lg overflow-hidden shadow-md'>
+              <div class='relative'>
+                <button
+                  data-product-id='{{id}}'
+                  class='absolute top-2 right-2 bg-red-500 hover:bg-red-600 text-white font-semibold py-1 px-2 rounded-full focus:outline-none focus:shadow-outline-red'
+                >
+                  Eliminar
+                </button>
+                <img
+                  src='{{thumbnails}}'
+                  alt='Product Image'
+                  class='w-full h-48 object-contain'
+                />
+              </div>
+              <div class='p-4'>
+                <h1 class='text-xl font-semibold mb-2'>{{title}}</h1>
+                <p class='text-gray-700'>${{price}}</p>
+                <p class='text-gray-700 mt-2'>STOCK {{stock}}</p>
+                <p class='text-gray-700'>{{description}}</p>
+                <p class='text-gray-700 mt-2'>Creador: {{email}}</p>
+                <p class='text-gray-700'>Rol: {{owner}}</p>
               </div>
             </div>
-            {{else}}
-            <p>No hay productos disponibles.</p>
-            {{/each}}
-          </div>
+          {{else}}
+            <p class='text-center'>No hay productos disponibles.</p>
+          {{/each}}
         </div>
-      </div>
-      <div class="d-flex justify-content-center">
-        {{#if hasPrevPage}}
-        <div class="pagination-container">
-          <p class="pagination-text">Página previa: {{prevPage}}</p>
-          <a href="/products?page={{prevPage}}"><button>Anterior</button></a>
+
+        <div class='flex justify-between items-center mt-8'>
+          {{#if hasPrevPage}}
+            <div class='flex items-center'>
+              <p class='mr-2'>Página previa: {{prevPage}}</p>
+              <a
+                href='/products?page={{prevPage}}'
+                class='bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'
+              >Anterior</a>
+            </div>
+          {{/if}}
+
+          {{#if hasNextPage}}
+            <div class='flex items-center'>
+              <p class='mr-2'>Página siguiente: {{nextPage}}</p>
+              <a
+                href='/products?page={{nextPage}}'
+                class='bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'
+              >Siguiente</a>
+            </div>
+          {{/if}}
         </div>
-        {{/if}}
-        <div class="pagination-container">
-          <p class="pagination-text">Página actual: {{page}}</p>
-        </div>
-        {{#if hasNextPage}}
-        <div class="pagination-container">
-          <p class="pagination-text">Página siguiente: {{nextPage}}</p>
-          <a href="/products?page={{nextPage}}"><button>Siguiente</button></a>
-        </div>
-        {{/if}}
       </div>
     </div>
-  </div>
   {{/if}}
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/js/index.js"></script>
+</main>
+
+<script src='https://cdn.jsdelivr.net/npm/sweetalert2@11'></script>
+<script src='/js/index.js'></script>
