--- a/src/views/usermanagement.handlebars
+++ b/src/views/usermanagement.handlebars
@@ -10,16 +10,14 @@
                     <div>
                         <div>
                             <div class="card card-body rounded-2 mb-2 animate__animated animate__fadeInUp background">
-                                <button class="btn btn-danger btn-delete-user" data-user-id="{{id}}"
-                                    style="border: 1px solid black; font-size: 12px;">Eliminar Usuario</button>
+                                <button class="btn btn-danger btn-delete-user" data-user-id="{{id}}">Eliminar Usuario</button>
                                 <div class="d-flex justify-content-between">
                                     <h1 class="h3 card-title">Usuario: {{firstname}} {{lastname}}</h1>
                                 </div>
                                 <p class="h5">{{email}}</p>
                                 <div>
                                     <h2>Rol : {{role}} </h2>
-                                    <button class="btn btn-warning btn-rol-user" data-user-id="{{id}}"
-                                    style="border: 1px solid black; font-size: 12px;">Cambiar rol</button>
+                                    <button class="btn btn-warning btn-rol-user" data-user-id="{{id}}">Cambiar rol</button>
                                 </div>
                             </div>
                         </div>
