--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-  
+  <link rel="stylesheet" href="./style.css">
   <title>{{title}}</title>
 </head>
 
