--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -40,9 +40,8 @@
     </form>
     <div class="mt-2 text-center text-sm text-gray-500"> <a href="/register"><button>Register</button></a></div>
     <div>
-      <br>
       <a href="/api/session/github"> <button type="submit"
-          class="flex w-full justify-center text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30 me-2 mb-2">
+          class="w-full justify-center text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30 me-2 mb-2">
           <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -50,7 +49,8 @@
               clip-rule="evenodd" />
           </svg>
           Logearse Con Github
-        </button></a>
+        </button>
+        </a>
 
     </div>
   </div>
