--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -15,7 +15,7 @@
         <form action="/api/session/logout" method="get">
           <button type="submit"
             class="border border-gray-200 bg-gray-200 text-gray-700 rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-gray-300 focus:outline-none focus:shadow-outline">
-            Cerrar session
+            Cerrar sesión
           </button>
         </form>
         <div class="mt-6 w-fit mx-auto">
@@ -28,7 +28,7 @@
         <p> </p>
         <p>Edad: {{age}}</p>
 
-        <div>
+        <div class="flex flex-wrap max-w-xl justify-center">
           {{#if isAdmin}}
           <a href="/products">
             <button type="button"
@@ -51,19 +51,27 @@
               Ir a administrar los productos</button>
           </a>
 
-          <a href="/chat">Ir a enviar mensajes al chat</a> <br>
-          <a href="/cartsuser">Ir a ver mi carrito</a>
+          <a href="/chat">
+            <button type="button"
+              class="border border-teal-500 bg-teal-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-teal-600 focus:outline-none focus:shadow-outline">
+              Ir a enviar mensajes al chat</button>
+          </a>
+          <a href="/cartsuser">
+            <button type="button"
+              class="border border-teal-500 bg-teal-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-teal-600 focus:outline-none focus:shadow-outline">
+              Ir a ver mi carrito
+            </button>
+          </a>
         </div>
         {{else}}
         <div>
           <a href="/chat">Ir a enviar mensajes al chat</a> <br>
-          <a href="/cartsuser">Ir a ver mi carrito</a><br>
+          <a href="/cartsuser" class="text-center bg-slate-500">Ir a ver mi carrito</a><br>
           <a href="/completeprofile">Completar Perfil</a>
         </div>
         <h1>{{firstName}} {{lastName}}</h1>
         {{/if}}
         {{/if}}
-      </div>
       </div>
     </section>
   </section>
