--- a/src/views/cartsuser.handlebars
+++ b/src/views/cartsuser.handlebars
@@ -2,81 +2,67 @@
   <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
 </header>
 
-<main class='flex flex-col justify-center items-center py-12 lg:px-8'>
+<main
+  class='flex flex-col container mx-auto max-w-6xl justify-center items-center px-6 py-12 lg:px-8'
+>
+
   <p>¡Hola {{firstname}} , Esperamos que tengas una buena compra!</p>
 
-<div class="flex flex-wrap bg-fuchsia-400">
-  <div class="w-full">
-    <h2 class="text-2xl text-center font-semibold mb-4">Agregar al carrito</h2>
-    <div class="flex py-3 h-80">
-      <div class="w-full">
-        <div class="flex container max-w-6xl">
-          {{#if products}}
-            {{#each products}}
-              <div class="bg-white rounded-lg overflow-hidden shadow-md mb-4 animate__animated animate__fadeInUp">
-                <div class="flex justify-between p-4">
-                  <h1 class="text-lg font-semibold">{{title}}</h1>
-                  <p class="text-lg font-semibold">${{price}}</p>
-                </div>
-                <p class="px-4">{{description}}</p>
-                <img
-                  src="http://localhost:8080/{{image}}"
-                  alt="{{title}}"
-                  class="w-full h-40 object-cover max-h-40"
-                />
-                <p class="px-4 mt-2">STOCK: {{stock}}</p>
-                <div class="flex items-center justify-between px-4 mt-2">
-                  <input
-                    type="number"
-                    max="{{stock}}"
-                    id="quantity"
-                    value="1"
-                    class="w-16 p-2 border rounded"
-                  />
-                  <button
-                    class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
-                    data-product-id="{{_id}}"
-                  >
-                    Agregar al carrito
-                  </button>
-                </div>
-              </div>
-            {{/each}}
-          {{else}}
-            <p class="text-center">No hay productos disponibles.</p>
-          {{/if}}
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-    <div>
-      <div>
-        <h1>Carrito de Compras de {{firstname}} {{lastname}}</h1>
-        <br />
-        <button class='btn btn-danger mt-3' id='delete-cart'>Borrar Carrito</button>
-        <div class='d-flex flex-wrap py-3 overflow-auto' data-cart-id='{{cId}}'>
-          {{#each cartsOfUser}}
-            <div
-              class='d-flex flex-column justify-content-center card card-body rounded-2 mb-2 animate__animated animate__fadeInUp background-2'
+  <div class='grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6'>
+    {{#if products}}
+      {{#each products}}
+        <div class='bg-white rounded-lg overflow-hidden shadow-md p-6'>
+          <div class='mb-4'>
+            <h1 class='text-xl font-semibold'>{{title}}</h1>
+            <p class='text-lg font-semibold'>${{price}}</p>
+          </div>
+          <p class='mb-4'>{{description}}</p>
+          <img
+            src='http://localhost:8080/{{image}}'
+            alt='{{title}}'
+            class='w-full h-40 object-contain mb-4'
+          />
+          <p class='mb-2'>STOCK: {{stock}}</p>
+          <div class='flex items-center justify-between'>
+            <input
+              type='number'
+              max='{{stock}}'
+              id='quantity'
+              value='1'
+              class='w-16 p-2 border rounded'
+            />
+            <button
+              data-product-id='{{_id}}'
+              class='bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600'
             >
-              <button
-                class='btn btn-danger btn-delete-product'
-                data-product-id='{{productsid}}'
-              >Eliminar Producto</button>
-              <h2 class='h3 card-title'>{{title}}</h2>
-              <p class='h5'>Valor: {{price}}</p>
-              <h3>Cantidad por comprar: {{quantity}}</h3>
-            </div>
-          {{else}}
-            <p>No has agregado ningún producto a tu carrito.</p>
-          {{/each}}
+              Agregar al carrito
+            </button>
+          </div>
         </div>
-        <button class='btn btn-success btn-purchase'>Comprar Carrito</button>
+      {{/each}}
+    {{else}}
+      <p class='col-span-2 text-center'>No hay productos disponibles.</p>
+    {{/if}}
+  </div>
+
+  <div>
+    <div>
+      <h1>Carrito de Compras de {{firstname}} {{lastname}}</h1>
+      <br />
+      <button id='delete-cart'>Borrar Carrito</button>
+      <div data-cart-id='{{cId}}'>
+        {{#each cartsOfUser}}
+          <div>
+            <button data-product-id='{{productsid}}'>Eliminar Producto</button>
+            <h2>{{title}}</h2>
+            <p>Valor: {{price}}</p>
+            <h3>Cantidad por comprar: {{quantity}}</h3>
+          </div>
+        {{else}}
+          <p>No has agregado ningún producto a tu carrito.</p>
+        {{/each}}
       </div>
+      <button class='btn-purchase'>Comprar Carrito</button>
     </div>
   </div>
 </main>
